Improve code quality
and fix implementation of CassandraDatabaseMetaData.getStringFunctions()