@@ -35,6 +35,8 @@ import java.math.BigInteger;
 import java.math.RoundingMode;
 import java.net.InetAddress;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.ByteBuffer;
 import java.sql.Blob;
@@ -947,8 +949,8 @@ public class CassandraMetadataResultSet extends AbstractResultSet implements Cas
             return null;
         } else {
             try {
-                return new URL(storedUrl);
-            } catch (final MalformedURLException e) {
+                return new URI(storedUrl).toURL();
+            } catch (final URISyntaxException | MalformedURLException e) {
                 throw new SQLException(String.format(MALFORMED_URL, storedUrl), e);
             }
         }
@@ -963,8 +965,8 @@ public class CassandraMetadataResultSet extends AbstractResultSet implements Cas
             return null;
         } else {
             try {
-                return new URL(storedUrl);
-            } catch (final MalformedURLException e) {
+                return new URI(storedUrl).toURL();
+            } catch (final URISyntaxException | MalformedURLException e) {
                 throw new SQLException(String.format(MALFORMED_URL, storedUrl), e);
             }
         }
@@ -1255,7 +1257,7 @@ public class CassandraMetadataResultSet extends AbstractResultSet implements Cas
             }
             final AtomicBoolean searchable = new AtomicBoolean(false);
             statement.connection.getSession().getMetadata().getKeyspace(schemaName)
-                .flatMap(metadata -> metadata.getTable(tableName))
+                .flatMap(ksMetadata -> ksMetadata.getTable(tableName))
                 .ifPresent(tableMetadata -> {
                     boolean result;
                     // Check first if the column is a clustering column or in a partitioning key.
